--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -2,10 +2,10 @@ name: Build image and deploy
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
       branches: 
-      - main
+      - master
 
 env:
   PROJECT_ID: diploma
