--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -29,7 +29,7 @@ jobs:
     - id: 'auth'
       uses: 'google-github-actions/auth@v2'
       with:
-        credentials_json: '${{ REGISTRY }}'
+        credentials_json: '${{ secrets.REGISTRY }}'
 
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
