--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -46,13 +46,13 @@ jobs:
     - name: Docker Build
       run: |-
         cp $GOOGLE_APPLICATION_CREDENTIALS gcp-sa-key.json
-        docker build --tag "gcr.io/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA" .
-        docker tag "gcr.io/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA" "gcr.io/$PROJECT_ID/$IMAGE_NAME:latest"
+        docker build --tag "gcr.io/images/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA" .
+        docker tag "gcr.io/images/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA" "gcr.io/$PROJECT_ID/$IMAGE_NAME:latest"
 
     - name: Publish
       run: |-
-        docker push "gcr.io/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA"
-        docker push "gcr.io/$PROJECT_ID/$IMAGE_NAME:latest"
+        docker push "gcr.io/images/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA"
+        docker push "gcr.io/images/$PROJECT_ID/$IMAGE_NAME:latest"
 
 #    - name: Deploy
 #      run: |-
