--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -47,7 +47,7 @@ jobs:
       run: |-
         cp $GOOGLE_APPLICATION_CREDENTIALS gcp-sa-key.json
         docker build --tag "gcr.io/$PROJECT_ID/images/$IMAGE_NAME:$GITHUB_SHA" .
-        docker tag "gcr.io/$PROJECT_ID/images/$IMAGE_NAME:$GITHUB_SHA" "gcr.io/$PROJECT_ID/$IMAGE_NAME:latest"
+        docker tag "gcr.io/$PROJECT_ID/images/$IMAGE_NAME:$GITHUB_SHA" "gcr.io/$PROJECT_ID/images/$IMAGE_NAME:latest"
 
     - name: Publish
       run: |-
