--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -9,8 +9,8 @@ on:
 
 env:
   PROJECT_ID: tensile-will-419716
-  GKE_CLUSTER: foodhunt-dev
-  GKE_ZONE: europe-central2-a
+  GKE_CLUSTER: diploma
+  GKE_ZONE: us-central1-a
   IMAGE_NAME: java_app
   USE_GKE_GCLOUD_AUTH_PLUGIN: True
 
@@ -36,7 +36,7 @@ jobs:
 
     - run: |-
         gcloud components install gke-gcloud-auth-plugin
-#        gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
+        gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
 
     - name: Dump GCP environment config
       run: |-
@@ -55,9 +55,9 @@ jobs:
         docker push "us-central1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GITHUB_SHA"
         docker push "us-central1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest"
 
-#    - name: Deploy
-#      run: |-
-#        DEPLOY_IMAGE=gcr.io/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA
-#        sed -i 's|$DEPLOY_IMAGE|'"$DEPLOY_IMAGE"'|g' ./deploy/deployment.yaml
-#        kubectl apply -f deploy/deployment.yaml
-#        kubectl rollout status --namespace=placement -w deployment/placement-api
+    - name: Deploy
+      run: |-
+        DEPLOY_IMAGE=us-central1-docker.pkg.dev/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA
+        sed -i 's|$DEPLOY_IMAGE|'"$DEPLOY_IMAGE"'|g' ./k8s/deployment.yaml
+        kubectl apply -f k8s/deployment.yaml
+#        kubectl rollout status --namespace=java-application -w deployment/placement-api
