--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -58,6 +58,6 @@ jobs:
     - name: Deploy
       run: |-
         DEPLOY_IMAGE=us-central1-docker.pkg.dev/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA
-        sed -i 's|$DEPLOY_IMAGE|'"$DEPLOY_IMAGE"'|g' ./k8s/deployment.yaml
+        sed -i 's|$DEPLOY_IMAGE|'"$DEPLOY_IMAGE"'|g' k8s/deployment.yaml
         kubectl apply -f k8s/deployment.yaml
 #        kubectl rollout status --namespace=java-application -w deployment/placement-api
