--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -46,7 +46,6 @@ jobs:
 
     - name: Docker Build
       run: |-
-        cp $GOOGLE_APPLICATION_CREDENTIALS gcp-sa-key.json
         docker build --tag "us-central1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GITHUB_SHA" .
         docker tag "us-central1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GITHUB_SHA" "us-central1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest"
 
@@ -58,6 +57,7 @@ jobs:
     - name: Deploy
       run: |-
         DEPLOY_IMAGE=us-central1-docker.pkg.dev/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA
+        pwd
         sed -i 's|$DEPLOY_IMAGE|'"$DEPLOY_IMAGE"'|g' ./k8s/deployment.yaml
         kubectl apply -f k8s/deployment.yaml
 #        kubectl rollout status --namespace=java-application -w deployment/placement-api
