--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -56,7 +56,7 @@ jobs:
 
     - name: Deploy
       run: |-
-        DEPLOY_IMAGE=us-central1-docker.pkg.dev/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA
+        DEPLOY_IMAGE=us-central1-docker.pkg.dev/$PROJECT_ID/$IMAGE_NAME:latest
         sed -i 's|$DEPLOY_IMAGE|'"$DEPLOY_IMAGE"'|g' ./k8s/deployment.yml
         kubectl apply -f k8s/deployment.yml
 #        kubectl rollout status --namespace=java-application -w deployment/placement-api
