New test deployment to k8s

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -18,4 +18,4 @@ spec:
         image: $DEPLOY_IMAGE
         ports:
         - containerPort: 8000
-        imagePullPolicy: IfNotPresent
+      imagePullPolicy: Always
