--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -56,7 +56,7 @@ jobs:
 
     - name: Deploy
       run: |-
-        DEPLOY_IMAGE=us-central1-docker.pkg.dev/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA
+        DEPLOY_IMAGE=us-central1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GITHUB_SHA
         sed -i 's|$DEPLOY_IMAGE|'"$DEPLOY_IMAGE"'|g' ./k8s/deployment.yml
         cat k8s/deployment.yml | grep image
         kubectl apply -f k8s/deployment.yml
