--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,15 +1,12 @@
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
-  name: my-cip-service
+  name: java-app
   namespace: java-application
 spec:
-  type: ClusterIP
-  # Uncomment the below line to create a Headless Service
-  # clusterIP: None
   selector:
     app: java-app
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8000
+    - name: http
+      port: 80
+      targetPort: 8000
