--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -60,3 +60,16 @@ jobs:
         sed -i 's|$DEPLOY_IMAGE|'"$DEPLOY_IMAGE"'|g' ./k8s/deployment.yml
         kubectl apply -f k8s/deployment.yml
 #        kubectl rollout status --namespace=java-application -w deployment/placement-api
+
+    - name: send telegram message on push
+      uses: appleboy/telegram-action@master
+      with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            ${{ github.actor }} created commit:
+            Commit message: ${{ github.event.commits[0].message }}
+            
+            Repository: ${{ github.repository }}
+            
+            See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
