--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -61,7 +61,7 @@ jobs:
         kubectl apply -f k8s/deployment.yml
 #        kubectl rollout status --namespace=java-application -w deployment/placement-api
 
-    - name: send telegram message on push
+    - name: Send telegram message on push
       uses: appleboy/telegram-action@master
       with:
           to: ${{ secrets.TELEGRAM_TO }}
